[clean] Remove unused translations

--- a/src/config/locales/en/translation.json
+++ b/src/config/locales/en/translation.json
@@ -55,7 +55,7 @@
     "favourite": "Favourited",
     "bookmark": "Bookmarks",
     "local": "Local timeline",
-    "public": "Public timeline",
+    "public": "Federated timeline",
     "hashtag": "Hashtags",
     "search": "Search",
     "lists": "Lists"
@@ -68,20 +68,12 @@
     "follow_requests": "Follow requests",
     "direct_messages": "Direct messages",
     "local": "Local timeline",
-    "public": "Public timeline",
+    "public": "Federated timeline",
     "hashtag": "Hashtags",
     "search": "Search",
     "lists": "Lists",
     "members": "Members",
-    "option": {
-      "title": "Option",
-      "show_reblogs": "Show boosts",
-      "show_replies": "Show replies",
-      "apply": "Apply"
-    },
-    "new_toot": "Publish",
-    "reload": "Reload",
-    "settings": "Settings"
+    "reload": "Reload"
   },
   "settings": {
     "title": "Settings",
@@ -104,13 +96,6 @@
     },
     "timeline": {
       "title": "Timeline",
-      "unread_notification": {
-        "title": "Unread notifications",
-        "description": "Customize unread notifications for each timeline.",
-        "direct": "Direct messages",
-        "local": "Local timeline",
-        "public": "Public timeline"
-      },
       "use_marker": {
         "title": "Load the timeline from the last reading position",
         "home": "Home",
@@ -280,37 +265,6 @@
     }
   },
   "modals": {
-    "new_toot": {
-      "title": "New post",
-      "cw": "Write your warning here",
-      "status": "What's on your mind?",
-      "cancel": "Cancel",
-      "toot": "Publish",
-      "close_confirm": "Are you sure you want to discard this post?",
-      "close_confirm_ok": "Discard",
-      "close_confirm_cancel": "Continue editing",
-      "description": "Add alternate text for this media",
-      "footer": {
-        "add_image": "Add images",
-        "poll": "Add a poll",
-        "change_visibility": "Change visibility",
-        "change_sensitive": "Mark media as sensitive",
-        "add_cw": "Add content warnings",
-        "pined_hashtag": "Pinned hashtag"
-      },
-      "poll": {
-        "add_choice": "Add an option",
-        "expires": {
-          "5_minutes": "5 minutes",
-          "30_minutes": "30 minutes",
-          "1_hour": "1 hour",
-          "6_hours": "6 hours",
-          "1_day": "1 day",
-          "3_days": "3 days",
-          "7_days": "7 days"
-        }
-      }
-    },
     "jump": {
       "jump_to": "Jump to..."
     },
@@ -331,13 +285,10 @@
       "title": "Keyboard shortcuts",
       "ctrl_number": "Switch accounts",
       "ctrl_k": "Jump to other timelines",
-      "ctrl_n": "Open the new post dialog",
-      "ctrl_enter": "Publish the post",
+      "ctrl_enter": "Send the post",
       "ctrl_r": "Refresh current timeline",
       "j": "Select the next post",
       "k": "Select the previous post",
-      "h": "Switch focus to the left column",
-      "l": "Switch focus to the right column",
       "r": "Reply to the selected post",
       "b": "Boost the selected post",
       "f": "Favourite the selected post",
@@ -509,7 +460,7 @@
       "require_domain_name": "A domain name is required",
       "domain_format": "Please only enter the domain name"
     },
-    "new_toot": {
+    "compose": {
       "toot_length": "Post length should be between {{min}} and {{max}}",
       "attach_length": "You can only attach up to {{max}} image",
       "attach_length_plural": "You can only attach up to {{max}} images",
@@ -553,6 +504,34 @@
     "poll_expired": {
       "title": "Poll expired",
       "body": "{{username}}'s poll has ended"
+    }
+  },
+  "compose": {
+    "title": "New post",
+    "cw": "Write your warning here",
+    "status": "What's on your mind?",
+    "cancel": "Cancel",
+    "toot": "Post",
+    "description": "Add alternate text for this media",
+    "footer": {
+      "add_image": "Add images",
+      "poll": "Add a poll",
+      "change_visibility": "Change visibility",
+      "change_sensitive": "Mark media as sensitive",
+      "add_cw": "Add content warnings",
+      "pined_hashtag": "Pinned hashtag"
+    },
+    "poll": {
+      "add_choice": "Add an option",
+      "expires": {
+        "5_minutes": "5 minutes",
+        "30_minutes": "30 minutes",
+        "1_hour": "1 hour",
+        "6_hours": "6 hours",
+        "1_day": "1 day",
+        "3_days": "3 days",
+        "7_days": "7 days"
+      }
     }
   }
 }
