Display poll and vote poll

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -16,7 +16,13 @@
     "home": "Home",
     "notifications": "Notifications",
     "local": "Local",
-    "public": "Public"
+    "public": "Public",
+    "poll": {
+      "refresh": "Refresh",
+      "people": "{count} people",
+      "closed": "Closed",
+      "vote": "Vote"
+    }
   },
   "notifications": {
     "follow": "{user} followed you",
