Implement action buttons

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -22,6 +22,9 @@
       "people": "{count} people",
       "closed": "Closed",
       "vote": "Vote"
+    },
+    "actions": {
+      "open_in_browser": "Open in browser"
     }
   },
   "notifications": {
