--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -15,6 +15,7 @@
   "timeline": {
     "home": "Home",
     "notifications": "Notifications",
+    "direct": "Direct messages",
     "local": "Local",
     "public": "Public",
     "poll": {
@@ -25,6 +26,9 @@
     },
     "actions": {
       "open_in_browser": "Open in browser"
+    },
+    "conversation": {
+      "with": "With {user}"
     }
   },
   "notifications": {
