Implement sensitive post

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -75,7 +75,8 @@
       "unlisted": "Unlisted",
       "private": "Private",
       "direct": "Direct"
-    }
+    },
+    "nsfw": "Sensitive"
   },
   "alert": {
     "validation": {
