Hide sensitive image

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -14,7 +14,8 @@
         "closed": "Closed"
       },
       "show_more": "Show more",
-      "show_less": "Show less"
+      "show_less": "Show less",
+      "cw": "Media hidden"
     }
   },
   "accounts": {
