refs #4653 Add language settings

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -23,7 +23,8 @@
       "title": "Add account",
       "sign_in": "Sign in",
       "authorize": "Authorize"
-    }
+    },
+    "remove": "Remove"
   },
   "notification": {
     "favourite": {
@@ -105,5 +106,9 @@
     "timeline": "Timeline",
     "followers": "Followers",
     "followings": "Followings"
+  },
+  "settings": {
+    "title": "Settings",
+    "language": "Language"
   }
 }
