refs #4653 Load language at launch

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -21,6 +21,7 @@
   "accounts": {
     "new": {
       "title": "Add account",
+      "domain": "Domain",
       "sign_in": "Sign in",
       "authorize": "Authorize"
     },
