refs #4653 Change fontSize

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -113,6 +113,7 @@
   },
   "settings": {
     "title": "Settings",
-    "language": "Language"
+    "language": "Language",
+    "font_size": "Font size"
   }
 }
