--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -26,7 +26,7 @@
       "authorize": "Authorize",
       "authorization_code": "Authorization Code",
       "authorization_helper": "Please paste the authorization code from your browser",
-      "without_code_authorize": "Please approve Fedistar in your browser, and after you approve it please authorize"
+      "without_code_authorize": "Please approve Whalebird in your browser, and after you approve it please authorize"
     },
     "remove": "Remove"
   },
