refs #4653 Add jump modal

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -121,5 +121,8 @@
     "title": "Report {user}",
     "detail": "Detail",
     "submit": "Submit"
+  },
+  "jump": {
+    "placeholder": "Timelines"
   }
 }
