--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -91,7 +91,7 @@
     },
     "nsfw": "Sensitive",
     "poll": {
-      "add": "Add a choice",
+      "add": "Add",
       "5min": "5 minutes",
       "30min": "30 minutes",
       "1h": "1 hour",
