refs #4653 Add jump modal

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -134,5 +134,8 @@
     "title": "Report {user}",
     "detail": "Detail",
     "submit": "Submit"
+  },
+  "search": {
+    "placeholder": "Search timeline"
   }
 }
