--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,6 +4,7 @@
     "notifications": "Notifications",
     "local": "Local",
     "public": "Public",
+    "bookmarks": "Bookmarks",
     "search": "Search",
     "status": {
       "avatar": "Aavtar of {user}",
