refs #4792 Implement search for statuses

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -183,6 +183,9 @@
     "submit": "Submit"
   },
   "search": {
-    "placeholder": "Search timeline"
+    "placeholder": "Search timeline",
+    "statuses": "Statuses",
+    "accounts": "Accounts",
+    "hashtags": "Hashtags"
   }
 }
