--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -178,7 +178,18 @@
     "mode": "Color mode",
     "dark_mode": "Dark mode",
     "light_mode": "Light mode",
-    "theme": "Color theme"
+    "theme": "Color theme",
+    "proxy": {
+      "title": "Proxy",
+      "no": "No proxy",
+      "os": "Use system proxy settings",
+      "manual": "Manual proxy configuration",
+      "protocol": "Protocol",
+      "http": "http",
+      "socks": "socks",
+      "host": "Host",
+      "port": "Port"
+    }
   },
   "thirdparty": {
     "title": "Third-party licenses"
