refs #4794 Add save button in staging

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -173,6 +173,8 @@
   },
   "settings": {
     "title": "Settings",
+    "cancel": "Cancel",
+    "save": "Save",
     "language": "Language",
     "font_size": "Font size",
     "mode": "Color mode",
