--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -145,7 +145,8 @@
   "alert": {
     "validation": {
       "attachment_type": "You can attach only images or videos",
-      "attachment_length": "You can't attach over {limit} files"
+      "attachment_length": "You can't attach over {limit} files",
+      "attachment_required": "Please attache images or videos"
     },
     "upload_error": "Failed to upload the file",
     "compose": {
