refs #5013 Allow to open media on another window

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -21,6 +21,7 @@
       "show_less": "Show less",
       "cw": "Media hidden",
       "hide_media": "Hide media",
+      "open_media_window": "Open media on another window",
       "report": "Report {user}",
       "open_original": "Open original page",
       "filtered": "Filtered",
