--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -128,6 +128,7 @@
     },
     "visibility": {
       "public": "Public",
+      "local": "Local",
       "unlisted": "Unlisted",
       "private": "Private",
       "direct": "Direct"
